--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
